# atlassian-mcp-server

./: .env.example  .gitignore  README.ko.md  README.md  pyproject.toml
atlassian_mcp/: __init__.py  __main__.py  config.py  server.py
atlassian_mcp/tools/: __init__.py  confluence.py  jira.py
