[project]
name = "atlassian-mcp-server"
version = "0.1.0"
description = "MCP server providing Jira and Confluence tools for Claude Desktop/Code"
requires-python = ">=3.11"
license = "MIT"

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]
